--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "polymer": "polymer/polymer#^1.4.0",
-    "vaadin-grid": "vaadin/vaadin-grid#3c37785",
+    "vaadin-grid": "v2.0.0-pre.1",
     "vaadin-combo-box": "^1.1.0",
     "vaadin-date-picker": "^1.1.0",
     "vaadin-upload": "^1.1.0",
@@ -20,7 +20,8 @@
     "paper-checkbox": "polymerelements/paper-checkbox#^1.2.0",
     "qr-js": "^1.1.4",
     "paper-dialog": "polymerelements/paper-dialog#^1.0.4",
-    "iron-pages": "polymerelements/iron-pages#^1.0.7"
+    "iron-pages": "polymerelements/iron-pages#^1.0.7",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.22"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
